<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:background="@color/white"
    >

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/cartitemImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/biriyani2"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/Id_txt_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="20dp"
        android:text="1"
        android:textColor="#ffffff"
        android:gravity="center"
        android:background="@drawable/circile"
        app:layout_constraintStart_toEndOf="@id/cartitemImage"

        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/cartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/cartitemImage"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/priceImage"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:background="@drawable/price"
        app:layout_constraintTop_toBottomOf="@id/cartTitle"
        app:layout_constraintStart_toEndOf="@id/cartitemImage"
android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/cartPrice"
        app:layout_constraintTop_toBottomOf="@id/cartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        app:layout_constraintStart_toEndOf="@id/priceImage"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/grantTotalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/cartPrice"
        app:layout_constraintStart_toEndOf="@id/cartitemImage"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/equal"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/equal"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/grantTotalTitle"
        app:layout_constraintTop_toBottomOf="@id/cartPrice"
        android:layout_marginTop="20dp"
        />
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/priceImagee"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/price"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/cartPrice"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/equal"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/grantTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/cartPrice"
        app:layout_constraintStart_toEndOf="@id/priceImagee"
        android:layout_marginTop="20dp"
        />
</android.support.constraint.ConstraintLayout>