<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <android.support.constraint.ConstraintLayout
        android:id="@+id/toolbarParent"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        >
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/backHomelist"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/ic_back"
            app:layout_constraintTop_toTopOf="parent"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/toolbartitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chicken_biriyani"
            android:layout_marginStart="15dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/backHomelist"
            />
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/cart_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"
            />
    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.AppCompatImageView
        app:layout_constraintTop_toBottomOf="@id/toolbarParent"
        android:id="@+id/productImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/biriyani2"
        />
<android.support.v7.widget.AppCompatTextView
    android:id="@+id/biriyanidis"
    app:layout_constraintTop_toBottomOf="@id/productImage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/dicriptions"
    android:layout_marginTop="20dp"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="10dp"
    android:paddingEnd="10dp"
    android:gravity="left"
    android:textColor="@color/black"
    />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imagePrice"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/biriyanidis"
        android:src="@drawable/price"
        android:backgroundTint="@color/btn_bg"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/priceAmount"
        app:layout_constraintTop_toBottomOf="@id/biriyanidis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@id/imagePrice"
        android:layout_marginTop="5dp"
        android:textColor="@color/btn_bg"
        android:fontFamily="sans-serif"
        />
<android.support.constraint.ConstraintLayout
    android:id="@+id/addsubParent"
    app:layout_constraintTop_toBottomOf="@id/imagePrice"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:padding="10dp"
    android:background="@drawable/white_background"
    >
<android.support.v7.widget.AppCompatImageButton
    android:id="@+id/sub"
    android:layout_width="35dp"
    android:layout_height="35dp"
    android:background="@drawable/subtract1"
    />
<android.support.v7.widget.AppCompatTextView
    android:id="@+id/text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="1"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="80dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:textColor="@color/black"
    android:paddingStart="30dp"
    app:layout_constraintEnd_toStartOf="@id/add"
    />
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/add"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintStart_toEndOf="@id/text"
        android:layout_marginStart="80dp"
        android:background="@drawable/addbutton"
        />
</android.support.constraint.ConstraintLayout>
<android.support.v7.widget.AppCompatButton
    android:id="@+id/addCart"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:background="@drawable/cart_bacground"
    android:text="@string/add_cart"
    android:textColor="@color/white"
    android:layout_marginBottom="15dp"
    />

</android.support.constraint.ConstraintLayout>
